--- a/frontend/views/inmuebles/formularioGestionInmueble.html
+++ b/frontend/views/inmuebles/formularioGestionInmueble.html
@@ -1,35 +1,102 @@
-
-  <div class="toggle">
+<div class="toggle">
     <div class="tooltip1" style="color:black;width:8em;font-weight:bold;font-family:Verdana;font-size:1em;left:-6em;position:absolute;"><a ng-click="closeSession()">Cerrar sesi&oacute;n</a></div>
-  </div>
-  <div class="form" >
-    <center><h2 style="font-family:Verdana;">GESTI&Oacute;N CLIENTES</h2></center>
+</div>
+<div class="form" ng-init="limpiarCaracteristicasTipoInmueble()">
+    <center><h2 style="font-family:Verdana;">GESTI&Oacute;N INMUEBLES</h2></center>
     <br />
-    <form name="formularioCliente" ng-model="clientesForm" id="formularioCliente" method="post" action="listaClientes.php">
-      <label>Nombres</label><input name="cliente_nombres" type="text" placeholder="Nombres"/>      
-      <label>Apellidos</label><input name="cliente_apellidos" type="text" placeholder="Apellidos"/>      
-      <label>Tipo identificaci&oacute;n</label>
-      <select name="cliente_tipo_identificacion" ng-change="showClientsByID()" ng-options="id_tipo_id as id_tipo_id.descripcion for id_tipo_id in ids_tipo_id track by id_tipo_id.id_tipo_identificacion" ng-model="cliente.tipoIdentificacion" ng-init="getTiposIdentificacion()"/>        
-      </select>      
-      <label>N&uacute;mero identificaci&oacute;n</label><input name="cliente_numero_identificacion" type="number" placeholder="N&uacute;mero identificaci&oacute;n"/>
-      <label>Tel&eacute;fono m&oacute;vil</label><input name="cliente_telefono_movil" type="text" placeholder="Tel&eacute;fono m&oacute;vil"/>      
-      <label>Tel&eacute;fono fijo</label><input name="cliente_telefono_fijo" type="text" placeholder="Tel&eacute;fono fijo"/>      
-      <label>Correo electr&oacute;nico</label><input name="cliente_correo_electronico" type="email" placeholder="Correo electr&oacute;nico"/>      
-      <label>Tipo notificaci&oacute;n</label>
-      <select name="cliente_tipo_notificacion" ng-options="id_tipo_notificacion as id_tipo_notificacion.descripcion for id_tipo_notificacion in ids_tipo_notificacion track by id_tipo_notificacion.id_tipo_notificacion" ng-model="cliente.tipoNotificacion" ng-init="getTiposNotificacion()"/>        
+    <form name="formularioGestionInmueble" id="formularioGestionInmueble" ng-model="formularioGestionInmueble" method="post" NOVALIDATE>     
+      <label>Tipo inmueble (*)</label>
+      <select name="inmueble_tipo_inmueble" ng-options="id_tipo_inmueble as id_tipo_inmueble.name for id_tipo_inmueble in ids_tipo_inmuebles track by id_tipo_inmueble.id_tipo_inmueble" ng-model="inmueble.tipoInmueble" ng-change="getCaracteristicasTiposInmuebles(inmueble.tipoInmueble.id_tipo_inmueble,inmueble.tipoInmueble.name)" ng-init="getTiposInmuebles()"/>        
       </select> 
+      <label>Pa&iacute;s (*)</label>
+      <select name="inmueble_codigoPais" id="codigoPais" ng-options="id_pais as id_pais.name for id_pais in ids_paises track by id_pais.id_pais" ng-model="inmueble.codigoPais" ng-change="getDepartamentos(inmueble.codigoPais)" ng-init="getPaises()"/>        
+      </select>
+      <label>Departamento (*)</label>
+      <select name="inmueble_departamento" ng-options="id_departamento as id_departamento.name for id_departamento in ids_departamentos track by id_departamento.id_departamento" ng-change="getCiudades(inmueble.codigoDepartamento)" ng-model="inmueble.codigoDepartamento"/>
+      </select>
+      <label>Ciudad (*)</label>
+      <select name="inmueble_ciudad" ng-options="id_ciudad as id_ciudad.name for id_ciudad in ids_ciudades track by id_ciudad.id_ciudad" ng-model="inmueble.codigoCiudad" ng-change="getZonasSectores(inmueble.codigoCiudad)"/>        
+      </select>
+      <label>Sector</label>
+      <select name="inmueble_sector" ng-options="id_sector as id_sector.name for id_sector in ids_sectores track by id_sector.id_sector" ng-model="inmueble.codigoSector"/>        
+      </select>
+      <label>Zona / Localidad</label>
+      <select name="inmueble_zona" ng-options="id_zona as id_zona.name for id_zona in ids_zonas track by id_zona.id_zona" ng-model="inmueble.codigoZona"/>        
+      </select>  
+      <label>Direcci&oacute;n</label><input name="inmueble_direccion" type="text" ng-model="inmueble.direccion"/>
+      <label>Precio</label><input name="inmueble_precio" type="number" ng-model="inmueble.precio"/>
+      <label>Moneda</label>
+      <select name="inmueble_moneda" ng-options="id_moneda as id_moneda.denominacion for id_moneda in ids_monedas track by id_moneda.id_moneda" ng-model="inmueble.moneda" ng-init="getMonedas()" ng-change="getConversionPesos(inmueble.moneda.id_moneda)"/>     
+      </select>
+      <label ng-if="inmueble.moneda">{{conversion_pesos}}</label>   
       <br />
-      <center>      
-      <button style="width:15em;" class="crear_cliente" ng-click="saveClientes()">Guardar</button>
+      <center ng-if="cant_caract_inm!='0'"><label style="font-weight: bolder;font-size: 16px;">Caracter&iacute;sticas</label></center>       
+      <table ng-init='configPages1()' style="width: 70%;" ng-if="cant_caract_inm_obl!='0'">            
+            <tbody>
+              <tr ng-repeat='lista_caracteristica_inmueble in lista_caracteristicas_obligatorias_inmueble'>                      
+                <td style="width: 50%;text-align: left;vertical-align: top;padding-top: 1em;">
+                  {{lista_caracteristica_inmueble.tipo_caracteristica}}                      
+                </td>  
+                <td ng-if="lista_caracteristica_inmueble.criterio_diligenciamiento=='Obligatorio'" style="width: 50%;vertical-align: top;padding-top: 1em;">
+                  <div class="tooltip">
+                   <input type="text" id="caracteristica[lista_caracteristica_inmueble.id_caracteristicas_tipo_inmueble]" name="caracteristica[lista_caracteristica_inmueble.id_caracteristicas_tipo_inmueble]" ng-model="caracteristicas_inmueble_busq.caracteristica[lista_caracteristica_inmueble.numero_fila][lista_caracteristica_inmueble.id_caracteristicas_tipo_inmueble]" ng-if="lista_caracteristica_inmueble.tipo_caracteristica_inmueble=='Descriptivo'">
+                   <input type="number" id="caracteristica[lista_caracteristica_inmueble.id_caracteristicas_tipo_inmueble]" name="caracteristica[lista_caracteristica_inmueble.id_caracteristicas_tipo_inmueble]" ng-model="caracteristicas_inmueble_busq.caracteristica[lista_caracteristica_inmueble.numero_fila][lista_caracteristica_inmueble.id_caracteristicas_tipo_inmueble]" ng-if="lista_caracteristica_inmueble.tipo_caracteristica_inmueble=='Numérico'">
+                   <label class="switch" ng-if="lista_caracteristica_inmueble.tipo_caracteristica_inmueble=='Booleano (SI/NO)'">
+                     <input type="checkbox" id="caracteristica[lista_caracteristica_inmueble.id_caracteristicas_tipo_inmueble]" name="caracteristica[lista_caracteristica_inmueble.id_caracteristicas_tipo_inmueble]" ng-model="caracteristicas_inmueble_busq.caracteristica[lista_caracteristica_inmueble.numero_fila][lista_caracteristica_inmueble.id_caracteristicas_tipo_inmueble]">
+                     <span style="width: 5em;" class="slider round"></span>
+                   </label>
+                   <span class="tooltiptext">{{lista_caracteristica_inmueble.descripcion}}</span>
+                  </div> 
+                </td>                     
+              </tr>
+            </tbody>
+          </table>
+      <label ng-if="cant_caract_inm_opc!='0'">Caracter&iacute;sticas adicionales</label>    
+      <label ng-if="cant_caract_inm_opc!='0'" class="switch">
+        <input type="checkbox" id="inmueble_caracteristicas_adicionales" name="inmueble_caracteristicas_adicionales" ng-model="inmueble.caracteristicas_adicionales" ng-change="mostrarCaracteristicasAdicionales(inmueble.caracteristicas_adicionales)">
+        <span style="width: 4.5em;" class="slider round"></span>
+      </label>   
+      <table ng-init='configPages1()' style="width: 70%;" ng-if="cant_caract_inm_obl_show!='0'">            
+            <tbody>
+              <tr ng-repeat='lista_caracteristica_inmueble in lista_caracteristicas_opcionales_inmueble'>                      
+                <td style="width: 50%;text-align: left;vertical-align: top;padding-top: 1em;">
+                  {{lista_caracteristica_inmueble.tipo_caracteristica}}                      
+                </td>  
+                <td style="width: 50%;vertical-align: top;padding-top: 1em;">
+                  <div class="tooltip">
+                   <input type="text" id="caracteristica[lista_caracteristica_inmueble.id_caracteristicas_tipo_inmueble]" name="caracteristica[lista_caracteristica_inmueble.id_caracteristicas_tipo_inmueble]" ng-model="caracteristicas_inmueble_busq.caracteristica_opc[lista_caracteristica_inmueble.numero_fila][lista_caracteristica_inmueble.id_caracteristicas_tipo_inmueble]" ng-if="lista_caracteristica_inmueble.tipo_caracteristica_inmueble=='Descriptivo'">
+                   <input type="number" id="caracteristica[lista_caracteristica_inmueble.id_caracteristicas_tipo_inmueble]" name="caracteristica[lista_caracteristica_inmueble.id_caracteristicas_tipo_inmueble]" ng-model="caracteristicas_inmueble_busq.caracteristica_opc[lista_caracteristica_inmueble.numero_fila][lista_caracteristica_inmueble.id_caracteristicas_tipo_inmueble]" ng-if="lista_caracteristica_inmueble.tipo_caracteristica_inmueble=='Numérico'">
+                   <label class="switch" ng-if="lista_caracteristica_inmueble.tipo_caracteristica_inmueble=='Booleano (SI/NO)'">
+                     <input type="checkbox" id="caracteristica[lista_caracteristica_inmueble.id_caracteristicas_tipo_inmueble]" name="caracteristica[lista_caracteristica_inmueble.id_caracteristicas_tipo_inmueble]" ng-model="caracteristicas_inmueble_busq.caracteristica_opc[lista_caracteristica_inmueble.numero_fila][lista_caracteristica_inmueble.id_caracteristicas_tipo_inmueble]">
+                     <span style="width: 5em;" class="slider round"></span>
+                   </label>
+                   <span class="tooltiptext">{{lista_caracteristica_inmueble.descripcion}}</span>
+                  </div> 
+                </td>                     
+              </tr>
+            </tbody>
+          </table>        
+      <input type="file" file-input="files" multiple />
+      <button style="margin-left: 15%;width: 5em;" class="crear_cliente" ng-click="uploadImage()">Subir</button>
       <br />
       <br />
-      <button style="width:15em;" class="consultar" onclick="ajax_loadContent('formulario','formularioGestionCliente.html');return false">M&aacute;s Informaci&oacute;n</button>
+      <div class="container" ng-app="galleryapp" ng-controller="uploadController" ng-init="show_images()">
+        <div class="col-md-3" ng-repeat="image in uploaded_images">
+          <img ng-src="upload/{{image.file_name}}" width="200" height="200" class="show_images" />
+        </div>
+      </div>         
+      <br />  
+      <label>Descripci&oacute;n</label>
+      <textarea name="inmueble_descripcion" ng-model="inmueble.descripcion"></textarea>  
       <br />
+      <center>
+      <button style="width:15em;" class="cotizaciones" ng-click="guardarInmuebles()">Guardar</button>
       <br />
-      <button style="width:15em;" class="crear_cliente" onclick="ajax_loadContent('formulario','formularioGestionCliente.html');return false">Solicitud</button>
+      <br />  
+      <button style="width:15em;" class="limpiar" ng-click="limpiarInmuebles()">Limpiar</button>
       <br />
-      <br />
-      <button style="width:15em;" class="volver" ng-click="showClientsIndex()">Volver</button></center>
+      <br />       
+      <button style="width:15em;" class="volver" ng-click="showInmueblesIndex()");return false">Volver</button></center>
     </form>
   </div>
   <div class="cta">SONIA<br />Sistema Organizador de Negocios Inmobiliarios Asistidos<br />
