--- a/frontend/views/menuPrincipal/formularioMenu.html
+++ b/frontend/views/menuPrincipal/formularioMenu.html
@@ -12,7 +12,8 @@
         }
   </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.7.2/angular.min.js"></script>
-  <script src="../../js/app.js"></script>  
+  <script src="../../js/app.js"></script> 
+  <script src="../../js/appImages.js"></script>  
   <script type="text/javascript" src="../../js/ajax.js"></script>
   <script type="text/javascript" src="../../js/ajax-dynamic-content.js"></script>  
   <script type="text/javascript" src="../../js/jquery-3.3.1.js"></script>
