--- a/frontend/views/clientes/formularioRedesCliente.html
+++ b/frontend/views/clientes/formularioRedesCliente.html
@@ -2,7 +2,7 @@
   <div class="toggle">
     <div class="tooltip1" style="color:black;width:8em;font-weight:bold;font-family:Verdana;font-size:1em;left:-6em;position:absolute;"><a ng-click="closeSession()">Cerrar sesi&oacute;n</a></div>
   </div>
-  <div class="form">
+  <div class="form" ng-init="listarRedesSocialesCliente()">
     <center><h2 style="font-family:Verdana;">REDES&nbsp;SOCIALES&nbsp;CLIENTE</h2></center>
     <br />
     <form name="formularioRedesCliente" ng-model="redesCliente" id="formularioRedesCliente" method="post" NOVALIDATE>         
@@ -11,21 +11,52 @@
       <label>Red social (*)</label>
       <select name="redesCliente_red_social" ng-options="id_red_social as id_red_social.nombre for id_red_social in ids_redes_sociales track by id_red_social.id_red_social" ng-model="redesCliente.red_social" ng-change="getImgRedSocial(redesCliente.red_social.imagen)"/>       
       </select> 
-      <label ng-if="redesCliente.red_social"><img src="{{redesCliente.red_seleccionada}}" width="30" heigth="30"/>&nbsp;&nbsp;Cuenta (*)</label><input name="redesCliente_nombre_cuenta" type="text" ng-if="redesCliente.red_social" ng-model="redesCliente.nombre_cuenta"/>      
+      <label ng-if="redesCliente.red_social"><img ng-if="redesCliente.red_social" src="{{redesCliente.red_seleccionada}}" width="30" heigth="30"/>&nbsp;&nbsp;Cuenta (*)</label><input name="redesCliente_nombre_cuenta" type="text" ng-if="redesCliente.red_social" ng-model="redesCliente.nombre_cuenta"/>      
       <input type="hidden" name="redesCliente_id_cliente" ng-model="redesCliente.id_cliente">
       <input type="hidden" name="redesCliente_id_redes_cliente" ng-model="redesCliente.id_redes_cliente">    
       <br />
       <label>(*) Informaci&oacute;n requerida</label>
       <br />
       <center>      
-      <button style="width:15em;" class="consultar" ng-click="saveRedesClientes('1')" >Guardar</button>
+      <button style="width:15em;" class="consultar" ng-click="saveRedesClientes()">Guardar</button>
       <br />
       <br />      
       <button style="width:15em;" class="limpiar" ng-click="limpiarRedesClientes()">Limpiar</button>      
       <br />
       <br />
-      <button style="width:15em;" class="volver" ng-click="showClientsCreate()">Volver</button></center>
+      <button style="width:15em;" class="volver" ng-click="seleccionarCliente(redesCliente.id_cliente)">Volver</button></center>
     </form>
+  </div>
+  <div class="form1" ng-if="cant_redes_sociales_cliente!='0'" style="top:-3em;position: relative;">           
+    <div class="container">    
+      <div class="panel panel-default">
+        <div class="panel-body">          
+          <table ng-init='configPages1()' style="width: 80%;">
+            <thead>
+              <tr>                
+                <th style="width: 48%;">Red&nbsp;social</th> 
+                <th style="width: 48%;">Cuenta</th>
+                <th style="width: 4%;">&nbsp;</th>                      
+              </tr>
+            </thead>
+            <tbody>
+              <tr ng-repeat='lista_red_social_cliente in lista_redes_sociales_cliente | startFromGrid: currentPage1 * pageSize1 | limitTo: pageSize1'>                      
+                <td style="text-align: left;" ng-click="seleccionarRedSocialCliente(lista_red_social_cliente.id_red_social_cliente)"><img src="..\..\form-images\social\{{lista_red_social_cliente.imagen}}" width="30" heigth="30">&nbsp;{{lista_red_social_cliente.red_social}}</td>  
+                <td style="text-align: left;" ng-click="seleccionarRedSocialCliente(lista_red_social_cliente.id_red_social_cliente)">{{lista_red_social_cliente.cuenta}}</td>    
+                <td style="text-align: center;"><a href="#" ng-click="borrarRedSocialCliente(lista_red_social_cliente.id_red_social_cliente,lista_red_social_cliente.red_social,lista_red_social_cliente.cuenta)"><img src="../../form-images/cross.png"></a></td>            
+              </tr>
+            </tbody>
+          </table>
+          <center>
+          <div class='btn-group'>
+            <button type='button' class='butt' ng-disabled='currentPage1 == 0' ng-click='currentPage1 = currentPage1 - 1'>&laquo;</button>
+            <button type='button' class='butt' ng-disabled='currentPage1 == page.no - 1' ng-click='setPage1(page.no)' ng-repeat='page in pages'>{{page.no}}</button>
+            <button type='button' class='butt' ng-disabled='currentPage1 >= usuarios.length/pageSize1 - 1' , ng-click='currentPage1 = currentPage1  + 1'>&raquo;</button>
+          </div>
+        </center>
+        </div>
+      </div>      
+    </div>
   </div>
   <div class="cta">SONIA<br />Sistema Organizador de Negocios Inmobiliarios Asistidos<br />
   <a href="mailto:lequiroga@gmail.com" target="_top">lequiroga@gmail.com</a>
