--- a/frontend/views/clientes/formularioRedesCliente.html
+++ b/frontend/views/clientes/formularioRedesCliente.html
@@ -3,7 +3,7 @@
     <div class="tooltip1" style="color:black;width:8em;font-weight:bold;font-family:Verdana;font-size:1em;left:-6em;position:absolute;"><a ng-click="closeSession()">Cerrar sesi&oacute;n</a></div>
   </div>
   <div class="form" ng-init="listarRedesSocialesCliente()">
-    <center><h2 style="font-family:Verdana;">REDES&nbsp;SOCIALES&nbsp;CLIENTE</h2></center>
+    <center><h2 style="font-family:Verdana;">REDES&nbsp;SOCIALES</h2></center>
     <br />
     <form name="formularioRedesCliente" ng-model="redesCliente" id="formularioRedesCliente" method="post" NOVALIDATE>         
       <label>N&uacute;mero identificaci&oacute;n</label><input name="redesCliente_numero_identificacion" type="number" string-to-number ng-model="redesCliente.numeroIdentificacion" ng-disabled="1"/>
