--- a/frontend/views/administracion/clasificacionBarrios/formularioClasificacionBarrios.html
+++ b/frontend/views/administracion/clasificacionBarrios/formularioClasificacionBarrios.html
@@ -50,17 +50,19 @@
           </center>     
           <table ng-init='configPages1()' style="width: 80%;">
             <thead>
-              <tr>                
-                <th style="width: 48%;">Zona</th>                  
-                <th style="width: 48%;">Barrio</th> 
+              <tr>
+                <th style="width: 56%;">Barrio</th> 
+                <th style="width: 30%;">Comuna</th>                  
+                <th style="width: 10%;">Estrato</th>
                 <th style="width: 4%;">&nbsp;</th>                    
               </tr>
             </thead>
             <tbody>
               <tr ng-repeat='lista_barrio_zona in lista_barrios_zonas | startFromGrid: currentPage1 * pageSize1 | limitTo: pageSize1'>                 
-                <td style="text-align: left;" ng-click="seleccionarBarrioZona(lista_barrio_zona.id_barrio_zona,lista_barrio_zona.id_zona,lista_barrio_zona.id_barrio)">{{lista_barrio_zona.nombre_zona}}</td>  
                 <td style="text-align: left;" ng-click="seleccionarBarrioZona(lista_barrio_zona.id_barrio_zona,lista_barrio_zona.id_zona,lista_barrio_zona.id_barrio)">{{lista_barrio_zona.nombre_barrio}}</td>  
-                <td style="text-align: center;"><a href="#" ng-click="borrarBarrioZona(lista_barrio_zona.id_barrio_zona,lista_barrio_zona.id_zona,lista_barrio_zona.id_ciudad)"><img src="../../form-images/cross.png"></a></td>            
+                <td style="text-align: left;" ng-click="seleccionarBarrioZona(lista_barrio_zona.id_barrio_zona,lista_barrio_zona.id_zona,lista_barrio_zona.id_barrio)">{{lista_barrio_zona.nombre_comuna}}</td>  
+                <td style="text-align: center;" ng-click="seleccionarBarrioZona(lista_barrio_zona.id_barrio_zona,lista_barrio_zona.id_zona,lista_barrio_zona.id_barrio)">{{lista_barrio_zona.nombre_estrato}}</td> 
+                <td style="text-align: center;"><a href="#" ng-click="borrarBarrioZona(lista_barrio_zona.id_zona_barrio,lista_barrio_zona.id_zona,lista_barrio_zona.id_ciudad)"><img src="../../form-images/cross.png"></a></td>            
               </tr>
             </tbody>
           </table>
