--- a/frontend/views/administracion/formularioAdministracion.html
+++ b/frontend/views/administracion/formularioAdministracion.html
@@ -7,7 +7,8 @@
     <form>            
       <center>        
         <button class="cotizaciones" style="width:15em;" ng-click="showCaracteristicasInmueblesIndex()">Caracter&iacute;sticas Inmuebles</button><br /><br />
-        <button class="volver" style="width:15em;" ng-click="showClasificacionBarriosIndex()">Clasificaci&oacute;n&nbsp;Zonas&nbsp;Barrios</button><br /><br /><br /><br />
+        <button class="volver" style="width:15em;" ng-click="showClasificacionBarriosIndex()">Clasificaci&oacute;n&nbsp;Zonas&nbsp;Barrios</button><br /><br />
+        <button class="cotizaciones" style="width:15em;" ng-click="showAsesoresInmobiliariaIndex()">Asesores&nbsp;Inmobiliaria</button><br /><br /><br /><br />
         <button style="width:15em;" class="volver" ng-click="returnMenuIndex()");return false">Volver</button>
         <!--br /><br />
         <button class="cotizaciones" style="width:15em;" ng-click="showInmueblesIndex()">Inmuebles</button-->        
