--- a/frontend/views/administracion/clasificacionBarrios/formularioClasificacionBarrios.html
+++ b/frontend/views/administracion/clasificacionBarrios/formularioClasificacionBarrios.html
@@ -46,7 +46,7 @@
       <div class="panel panel-default">
         <div class="panel-body">     
           <center>          
-            <h3>Zona seleccionada: {{clasificacionBarrios.codigoSector.name}}</h3>
+            <h3>Zona seleccionada: {{clasificacionBarrios.codigoSector.name}}, ciudad: {{clasificacionBarrios.codigoCiudad.name}}</h3>
           </center>     
           <table ng-init='configPages1()' style="width: 80%;">
             <thead>
