--- a/frontend/views/inmuebles/formularioInmueble.html
+++ b/frontend/views/inmuebles/formularioInmueble.html
@@ -16,17 +16,17 @@
       </select>      
       <label ng-if="inmueble.codigoCiudad.id_ciudad=='132'">Sector&nbsp;/&nbsp;Zona</label>
       <select ng-if="inmueble.codigoCiudad.id_ciudad=='132'" name="inmueble_sector" ng-options="id_sector as id_sector.name for id_sector in ids_sectores track by id_sector.id_sector" ng-change="listarBarriosZona1(inmueble.codigoSector.id_sector,inmueble.codigoCiudad.id_ciudad)" ng-model="inmueble.codigoSector"/> 
-        <option label="Seleccione" value="">Seleccione</option>     
+        <option label="Seleccione" value="">Sin&nbsp;informaci&oacute;n</option>     
       </select>
       <label ng-if="inmueble.codigoCiudad.id_ciudad=='132'">Estrato</label>
       <select name="inmueble_codigoEstratoCali" ng-if="inmueble.codigoCiudad.id_ciudad=='132'" ng-options="id_estrato as id_estrato.nombre for id_estrato in lista_estratos_cali track by id_estrato.codigo" ng-disabled="inmueble.codigoSector" ng-change="getLocEstCali(inmueble.codigoEstrato)" ng-model="inmueble.codigoEstrato"/>
-        <!--option value="" label="Seleccione">Seleccione</option-->     
+        <option value="" label="Seleccione">Sin&nbsp;informaci&oacute;n</option>     
       </select>
       <label ng-if="inmueble.codigoCiudad.id_ciudad=='132'||inmueble.codigoCiudad.id_ciudad=='794'">Localidad / Comuna</label>
       <select name="inmueble_zona" ng-if="inmueble.codigoCiudad.id_ciudad=='794'" ng-options="id_zona as id_zona.name for id_zona in ids_zonas track by id_zona.id_zona" ng-model="inmueble.codigoZona"/> 
         <!--option value="" label="Seleccione">Seleccione</option-->        
       </select> 
-      <select name="inmueble_zona" ng-if="inmueble.codigoCiudad.id_ciudad=='132'" ng-disabled="inmueble.codigoSector" ng-options="id_zona as id_zona.nombre for id_zona in lista_comunas_cali track by id_zona.codigo" ng-change="getBarriosLocCali(inmueble.codigoZona)" ng-model="inmueble.codigoZona"/>   
+      <select name="inmueble_zona" ng-if="inmueble.codigoCiudad.id_ciudad=='132'" ng-disabled="inmueble.codigoSector||inmueble.codigoEstrato" ng-options="id_zona as id_zona.nombre for id_zona in lista_comunas_cali track by id_zona.codigo" ng-change="getBarriosLocCali(inmueble.codigoZona)" ng-model="inmueble.codigoZona"/>   
         <!--option value="" label="Seleccione">Seleccione</option-->     
       </select>   
       <label ng-if="inmueble.codigoCiudad.id_ciudad=='132'">Barrio</label>
