--- a/frontend/views/menuPrincipal/formularioMenu1.html
+++ b/frontend/views/menuPrincipal/formularioMenu1.html
@@ -48,9 +48,8 @@
       <center>
         <button class="cotizaciones" style="width:15em;" href="#" onclick="ajax_loadContent('formulario','formularioCotizacion.php');return false">Solicitudes</button><br /><br />
         <button class="productos" style="width:15em;" ng-click="showClientsIndex()">Clientes</button><br /><br />
-        <button class="cotizaciones" style="width:15em;" ng-click="showInmueblesIndex()">Inmuebles</button><br /><br />
-        <button class="productos" style="width:15em;" href="#" onclick="ajax_loadContent('formulario','formularioProducto.html');return false">Aliados</button><br /><br />
-        <button class="cotizaciones" style="width:15em;" ng-click="showAdministracionIndex()">Administraci&oacute;n</button>
+        <button class="cotizaciones" style="width:15em;" ng-click="showInmueblesIndex()">Inmuebles</button><br /><br />        
+        <button class="productos" style="width:15em;" ng-click="showAdministracionIndex()">Administraci&oacute;n</button>
       </center>
     </form>
   </div>
