--- a/frontend/views/clientes/formularioCliente.html
+++ b/frontend/views/clientes/formularioCliente.html
@@ -25,7 +25,7 @@
     </form>
   </div>
   <div class="form1" ng-show="cant_clie_busq=='0'">
-    <center><h2 style="font-family:Verdana;">LISTA CLIENTES</h2></center>       
+    <center><h2 style="font-family:Verdana;">CONSULTA CLIENTES</h2></center>       
     <div class="container">    
       <div class="panel panel-default">
         <div class="panel-body">
